Bug #18750 Partitions: name restrictions
Submitted: 3 Apr 2006 17:01 Modified: 12 Apr 2006 1:24
Reporter: Peter Gulutzan Email Updates:
Status: Closed
Category:Server: Partition Severity:S3 (Non-critical)
Version: 5.1.9-beta-debug OS:Linux (SUSE 10.0)
Assigned to: Mikael Ronstrom Target Version:

[3 Apr 2006 17:01] Peter Gulutzan
Description:
I can now create a partition with a delimited
name, e.g. `x`. But the name can't include a
space, e.g. `x x` is illegal. And the name
cannot be a digit, e.g. `7` is illegal.
Other objects have no such restrictions
about what is legal.

How to repeat:
mysql> create table tp7 (s1 int) partition by list (s1) (partition `s1 s2` values in
(0));
ERROR 1458 (HY000): LIST PARTITIONING requires definition of VALUES IN for each
partition

mysql> create table t (s1 int) partition by list (s1) (partition `7` values in (1));
ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that
corresponds to your MySQL server version for the right syntax to use near '7 VALUES IN
(1) ENGINE = MyISAM)' at line 1
[4 Apr 2006 2:07] Miguel Solorzano
Thank you for the bug report.
[10 Apr 2006 12:19] Mikael Ronstrom
There was some fixes related to partitioning but there was a general bug fixed in
require_quotes that produced wrong quotations for SHOW CREATE TABLE and other
show commands.
[10 Apr 2006 15:58] Alexander Barkov
Peter, I've read your bug report several times and didn't understand.
Do you mean that expected behaviour is not to allow spaces or digits?

I.e. should it be fixed to give a nice error message?
Or, should it be fixed to allow spaces and digits?

Thanks!
[11 Apr 2006 5:44] Alexander Barkov
A patch has been commited:
http://lists.mysql.com/commits/4762
[11 Apr 2006 5:45] Alexander Barkov
The patch looks Ok to push.

Mikael: see my additional comments into a email.
[11 Apr 2006 21:40] Mikael Ronstrom
This patch will be available in 5.1.10
[12 Apr 2006 1:24] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 5.1.10 changelog. Closed.