BUG#18750: Various problems with partition names, quotation marks

mysql-test/r/partition.result:
  Added new test cases
mysql-test/t/partition.test:
  Added new test cases
sql/partition_info.cc:
  Check partition names that they don't have trailing spaces
sql/share/errmsg.txt:
  Added error code for wrong partition names
sql/sql_partition.cc:
  New method to add partition name strings, ignore OPTION_SHOW_QUOTE_CREATE
sql/sql_show.cc:
  require_quotes had a bug with identifiers that consisted of only digits,
  these are allowed identifiers but must be quoted and require_quote didn't
  tell this.
sql/sql_yacc.yy:
  Partition names should identifers and not ident_or_text