sql/partition_info.cc
@@ -696,6 +696,12 @@ bool partition_info::check_partition_info(handlerton **eng_type,
       partition_element *part_elem= part_it++;
       if (!is_sub_partitioned())
       {
+        if (check_table_name(part_elem->partition_name,
+                             strlen(part_elem->partition_name)))
+        {
+          my_error(ER_WRONG_PARTITION_NAME, MYF(0));
+          goto end;
+        }
         if (part_elem->engine_type == NULL)
           part_elem->engine_type= default_engine_type;
         DBUG_PRINT("info", ("engine = %d",
@@ -709,6 +715,12 @@ bool partition_info::check_partition_info(handlerton **eng_type,
         do
         {
           part_elem= sub_it++;
+          if (check_table_name(part_elem->partition_name,
+                               strlen(part_elem->partition_name)))
+          {
+            my_error(ER_WRONG_PARTITION_NAME, MYF(0));
+            goto end;
+          }
           if (part_elem->engine_type == NULL)
             part_elem->engine_type= default_engine_type;
           DBUG_PRINT("info", ("engine = %u",
